--- a/Views/experiment.html
+++ b/Views/experiment.html
@@ -9,10 +9,10 @@
     </head>
 
     <body onload="setup()">
-        <div class = "header">
-            <button onclick="reset()">reset</button>
-            <h1>Video-Variable Measurement</h1>
-        </div>
+        <header class = "header">
+            <a class="iconWrapper" onclick="reset()"><img class="home icon" src="../media/home_icon.png" alt="Home Icon"></a>
+            <a class="iconWrapper" onclick=""><img class="help icon" src="../media/help_icon.png" alt="Help Icon"></a>
+        </header>
         <div>
             <h2>Rate your Video</h2>
         </div>
