--- a/Views/results.html
+++ b/Views/results.html
@@ -9,10 +9,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     </head>
     <body onload="createData()">
-        <div class = "header">
-            <button onclick="reset()">reset</button>
-            <h1>Title</h1>
-        </div>
+        <header class = "header">
+            <a class="iconWrapper" onclick="reset()"><img class="home icon" src="../media/home_icon.png" alt="Home Icon"></a>
+            <a class="iconWrapper" onclick=""><img class="help icon" src="../media/help_icon.png" alt="Help Icon"></a>
+        </header>
         <canvas id="myChart" onload = "showGraph()" style="width:100%;max-width:700px"></canvas>
         <div id="exportCSV" onload="exportCSV()">
         </div>
