experiment: work on interface

--- a/Views/experiment.html
+++ b/Views/experiment.html
@@ -13,13 +13,28 @@
             <a class="iconWrapper" onclick="reset()"><img class="home icon" src="../media/home_icon.png" alt="Home Icon"></a>
             <a class="iconWrapper" onclick=""><img class="help icon" src="../media/help_icon.png" alt="Help Icon"></a>
         </header>
-        <div>
-            <h2>Rate your Video</h2>
-        </div>
-        <div id="videoContainer" class="videoContainer">
-            <button onclick='setUpVideo()'>pick source</button>"
-        </div>
-        <div id="ratingScale"></div>
+        <main class="mainBody">
+            <div class="pageContent">
+                <div class="textPanel">
+                    <h1>Rate your Video</h1>
+                </div>
+                <section class="experimentArea">
+                    <div id="videoContainer" class="videoContainer">
+                        <button class="bigButton" onclick='setUpVideo()'>pick source</button>
+                    </div>
+                    <div class="ratingScaleContainer">
+                        <div id="ratingScale"></div>
+                    </div>
+                </section>
+                
+            </div>
+        </main>
+        <footer class = "footer">
+            <span class="footerNote">02/04/2025</span>
+            <span class="footerNote">V0.9</span>
+            <span class="footerNote">Linda Steiner</span>
+            <span class="footerNote">VarSLA</span>
+        </footer>
     </body>
 </html>
 
