--- a/Views/experiment.html
+++ b/Views/experiment.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Rating</title>
-        <link href="../css/experiment.css" type="text/css" rel="stylesheet">
         <link href="../css/basicLayout.css" type="text/css" rel="stylesheet">
+        <link href="../css/experiment.css" type="text/css" rel="stylesheet">
         <script src="../js/rating.js"></script>
         <script src="../js/settings.js"></script>
     </head>
@@ -15,7 +15,7 @@
         </header>
         <main class="mainBody">
             <div class="pageContent">
-                <div class="textPanel">
+                <div class="textPanel" id="instruction">
                     <h1>Rate your Video</h1>
                 </div>
                 <section class="experimentArea">
@@ -26,12 +26,11 @@
                         <div id="ratingScale"></div>
                     </div>
                 </section>
-                
             </div>
         </main>
         <footer class = "footer">
-            <span class="footerNote">02/04/2025</span>
-            <span class="footerNote">V0.9</span>
+            <span class="footerNote">03/04/2025</span>
+            <span class="footerNote">V0.10 (Demo 1)</span>
             <span class="footerNote">Linda Steiner</span>
             <span class="footerNote">VarSLA</span>
         </footer>
