--- a/Views/index.html
+++ b/Views/index.html
@@ -81,8 +81,8 @@
             </div>
         </main>
         <footer class = "footer">
-            <span class="footerNote">02/04/2025</span>
-            <span class="footerNote">V0.9</span>
+            <span class="footerNote">03/04/2025</span>
+            <span class="footerNote">V0.10 (Demo 1)</span>
             <span class="footerNote">Linda Steiner</span>
             <span class="footerNote">VarSLA</span>
         </footer>
