--- a/css/experiment.css
+++ b/css/experiment.css
@@ -1,8 +1,18 @@
+html, body{
+    height: 100%;
+    max-height: 100%;
+    min-height: 100%;
+}
+
+.mainBody{
+    max-height: calc(100vw - 60px - 25px);
+}
+
 .pageContent{
     min-width: 400px;
     min-height: 300px;
+    height: 100%;
     max-height: 100%;
-    background-color: red;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -11,8 +21,8 @@
 
 .textPanel{
     text-align: center;
+    max-height: 10%;
     margin-bottom: 20px;
-    background-color: blue;
 }
 
 .textPanel h1{
@@ -30,26 +40,56 @@
 .experimentArea{
     background-color: rgba(245, 246, 232, 0.606);
     box-shadow: 0 0 10px 15px rgba(245, 246, 232, 0.606);
-    background-color: green;
+    height: 90%;
+    max-height: 90%;
+    width: 100%;
 }
 
 .videoContainer{
-    background-color: yellow;
-    height: 80%;
+    /*height: 85%;
+    max-height: 85%;
+    width: 100%;*/
+    height: 400px;
+    width: 700px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .bigButton{
     font-size: 15pt;
+    max-height: 90%;
     padding: 20px;
 }
 
+
 .videoPlayer{
+    height: auto;
+    width: auto;
     max-height: 100%;
     max-width: 100%;
 }
 
 .ratingScaleContainer{
     min-height: 30px;
-    background-color: orange;
+    height: 15%;
+    max-height: 15%;
+    width: 100%;
     border: solid;
+    display: flex;
+    flex-wrap: wrap;
+    flex-flow: row;
+    justify-content: space-evenly;
+    align-items: center;
 }
+
+.ratingButton{
+    flex: 1;
+    height: 40px;
+    width: 40px;
+    font-size: 2vw;
+    margin: 10px;
+    text-align: center;
+}
+
