fixed awaiting src input before removing button, working on rating at start/end behaviour (not finished)

--- a/Views/experiment.html
+++ b/Views/experiment.html
@@ -4,7 +4,7 @@
         <title>Rating</title>
         <link href="../css/basicLayout.css" type="text/css" rel="stylesheet">
         <link href="../css/experiment.css" type="text/css" rel="stylesheet">
-        <script src="../js/rating.js"></script>
+        <script src="../js/experiment.js"></script>
         <script src="../js/settings.js"></script>
     </head>
 
