adding no rating behaviour

--- a/Views/index.html
+++ b/Views/index.html
@@ -72,6 +72,15 @@
                                 </label>
                                 yes
                             </div>
+                            <div class="settingRow">
+                                <b>Behaviour when rating not provided in time:</b></br>
+                                <input type="radio" id="emergencyPause" name="notRatedBehaviour" value="pause">
+                                <label for="emergencyPause">pause</label><br>
+                                <input type="radio" id="neutralRate" name="notRatedBehaviour" value="neutral">
+                                <label for="neutralRate">rate neutral</label><br>
+                                <input type="radio" id="leaveOut" name="notRatedBehaviour" value="empty" checked="checked">
+                                <label for="leaveOut">leave out</label><br>
+                            </div>
                         </div>
                     </div>
                     <div class="startButtonContainer">
