enforce interval > 0, if interval/start/end empty take default values

--- a/css/index.css
+++ b/css/index.css
@@ -87,6 +87,10 @@
   padding: 10px;
 }
 
+.radioButton:checked{
+  /*background-color:rgb(48, 166, 154)*/
+  color: red;
+}
 
 /*based on https://www.w3schools.com/howto/howto_js_accordion.asp*/
 .settingAccordionTrigger{
