--- a/Views/index.html
+++ b/Views/index.html
@@ -74,11 +74,11 @@
                             </div>
                             <div class="settingRow">
                                 <b>Behaviour when rating not provided in time:</b></br>
-                                <input type="radio" id="emergencyPause" name="notRatedBehaviour" value="pause">
+                                <input type="radio" id="emergencyPause" name="notRatedBehaviour" value="pause" class="radioButton">
                                 <label for="emergencyPause">pause</label><br>
-                                <input type="radio" id="neutralRate" name="notRatedBehaviour" value="neutral">
+                                <input type="radio" id="neutralRate" name="notRatedBehaviour" value="neutral" class="radioButton">
                                 <label for="neutralRate">rate neutral</label><br>
-                                <input type="radio" id="leaveOut" name="notRatedBehaviour" value="empty" checked="checked">
+                                <input type="radio" id="leaveOut" name="notRatedBehaviour" value="empty" checked="checked" class="radioButton">
                                 <label for="leaveOut">leave out</label><br>
                             </div>
                         </div>
