--- a/Views/index.html
+++ b/Views/index.html
@@ -36,14 +36,14 @@
                         <div class="settingAccordion">
                             <div class="settingRow">
                                 <b>Interval:</b>
-                                <input id="interval_input" class="nrInput" type="number" min="1" value="60" onkeyup=enforceInterval(this)>
+                                <input id="interval_input" class="nrInputBig" type="number" min="1" max="3600" value="60" onkeyup=enforceInterval(this)>
                                 s
                             </div>
                             <div class="settingRow">
                                 <b>Rating Scale:</b>
-                                <input id="scale_start_input" class="nrInput" type="number" value="1" onkeyup=enforceScale(this)>
+                                <input id="scale_start_input" class="nrInputSmall" type="number" value="1" onkeyup=enforceScale(this) onchange=enforceScale(this)>
                                 to
-                                <input id="scale_end_input" class="nrInput" type="number" value="9" onkeyup=enforceScale(this)>
+                                <input id="scale_end_input" class="nrInputSmall" type="number" value="9" onkeyup=enforceScale(this) onchange=enforceScale(this)>
                             </div>
                             <div class="settingRow">
                                 <b>Pause Rating:</b> 
