--- a/css/index.css
+++ b/css/index.css
@@ -76,8 +76,11 @@
   min-width: 150px;
 }
 
-.nrInput{
-  width: 40px;
+.nrInputSmall{
+  width: 35px;
+}
+.nrInputBig{
+  width: 50px;
 }
 
 .startButton{
