ViInVaRa header and title

--- a/Views/index.html
+++ b/Views/index.html
@@ -11,7 +11,8 @@
         <main class="mainBody">
             <div class="pageContent">
                 <div class="textPanel">
-                    <h1>Welcome to the Page!</h1>
+                    <h1>ViInVaRa</h1>
+                    <h2>Video Interval Variable Rater</h2>
                     <h2>Based on MacIntyre’s Idiodynamic Software</h2>
                     <p>
                         This software can be used for experiments wherein a variable has to be rated on a scale while watching a video. The results are presented as a graph and can be downloaded as a CSV table.</br>
@@ -90,8 +91,8 @@
             </div>
         </main>
         <footer class = "footer">
-            <span class="footerNote">03/04/2025</span>
-            <span class="footerNote">V0.10 (Demo 1)</span>
+            <span class="footerNote">08/04/2025</span>
+            <span class="footerNote">V0.13 (Demo 1)</span>
             <span class="footerNote">Linda Steiner</span>
             <span class="footerNote">VarSLA</span>
         </footer>
