--- a/Views/experiment.html
+++ b/Views/experiment.html
@@ -11,6 +11,7 @@
     <body onload="setup()">
         <header class = "header">
             <a class="iconWrapper" onclick="reset()"><img class="home icon" src="../media/home_icon.png" alt="Home Icon"></a>
+            <h1>ViInVaRa</h1>
             <a class="iconWrapper" onclick=""><img class="help icon" src="../media/help_icon.png" alt="Help Icon"></a>
         </header>
         <main class="mainBody">
@@ -29,8 +30,8 @@
             </div>
         </main>
         <footer class = "footer">
-            <span class="footerNote">03/04/2025</span>
-            <span class="footerNote">V0.10 (Demo 1)</span>
+            <span class="footerNote">08/04/2025</span>
+            <span class="footerNote">V0.13 (Demo 1)</span>
             <span class="footerNote">Linda Steiner</span>
             <span class="footerNote">VarSLA</span>
         </footer>
