--- a/Views/results.html
+++ b/Views/results.html
@@ -8,7 +8,7 @@
         <script src="../js/results.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     </head>
-    <body onload="createData()">
+    <body onload="setUp()">
         <header class = "header">
             <a class="iconWrapper" onclick="reset()"><img class="home icon" src="../media/home_icon.png" alt="Home Icon"></a>
             <h1>ViInVaRa</h1>
