--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,44 @@
   align-items: center;
 }
 
+.themeChoice{
+  min-width: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: space-around;
+  flex-direction: row;
+}
+
+.themeOption{
+  width: 30px;
+  height: 30px;
+  margin: 10px;
+  border-radius: 100%;
+  cursor: pointer;
+  border: 2px solid black;
+}
+
+.green{
+  background: linear-gradient(90deg,rgba(10,129,130,1) 0%,rgba(12,148,131,1) 16%,rgba(12,148,113,1) 34%,rgba(17,214,164,1) 50%,rgba(12,148,113,1) 66%,rgba(12,148,131,1) 84%,rgba(10,129,130,1) 100%)
+}
+
+.pink{
+  background: linear-gradient(90deg, rgba(218,19,233,1) 0%, rgba(239,124,247,1) 16%, rgba(240,125,230,1) 34%, rgba(240,167,233,1) 50%, rgba(240,125,230,1) 66%, rgba(239,124,247,1) 84%, rgba(218,19,233,1) 100%);
+}
+
+.blue{
+  background: linear-gradient(90deg, rgba(19,73,233,1) 0%, rgba(111,169,238,1) 16%, rgba(112,200,242,1) 34%, rgba(171,223,246,1) 50%, rgba(112,200,242,1) 66%, rgba(111,169,238,1) 84%, rgba(19,73,233,1) 100%);
+}
+
+.gray{
+  background-color: rgba(245, 246, 232, 1);
+}
+
+.themeOption:hover{
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.296);
+  transform: scale(1.1);
+  transition: 0.2s;
+}
 
 .textPanel{
   text-align: center;
