--- a/Views/index.html
+++ b/Views/index.html
@@ -8,6 +8,11 @@
         <script src="../js/index.js"></script>
     </head>
     <body onload="chooseTheme('green')">
+        <header class = "header">
+            <a class="iconWrapper" onclick="reset()"><img class="home icon" src="../media/home_icon.png" alt="Home Icon"></a>
+            <h1>ViInVaRa</h1>
+            <a class="iconWrapper" onclick=""><img class="help icon" src="../media/help_icon.png" alt="Help Icon"></a>
+        </header>
         <main class="mainBody">
             <div class="pageContent">
                 <div class="themeChoice">
