changed internalStorage to data objects, added options to add labels to scale in settings (not formatted yet)

--- a/Views/experiment.html
+++ b/Views/experiment.html
@@ -6,6 +6,7 @@
         <link href="../css/experiment.css" type="text/css" rel="stylesheet">
         <script src="../js/experiment.js"></script>
         <script src="../js/settings.js"></script>
+        <meta charset="UTF-8">
     </head>
 
     <body onload="setup()">
