--- a/Views/results.html
+++ b/Views/results.html
@@ -7,6 +7,7 @@
         <script src="../js/settings.js"></script>
         <script src="../js/results.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+        <meta charset="UTF-8">
     </head>
     <body onload="setUp()">
         <header class = "header">
