if page reloaded when datapoints collected can keep them or dismiss. If kept, start video at last timepoint. Also improved rating button display

--- a/Views/experiment.html
+++ b/Views/experiment.html
@@ -24,7 +24,7 @@
                     <button class="bigButton" onclick='setUpVideo()'>pick source</button>
                 </div>
                 <div class="ratingScaleContainer">
-                    <div id="ratingScale"></div>
+                    <div id="ratingScale" class="ratingScale"></div>
                 </div>
             </div>
         </main>
