--- a/css/index.css
+++ b/css/index.css
@@ -175,6 +175,20 @@
 
 #labelSettings{
   display: none;
+  grid-auto-rows: 1fr; 
+  grid-template-columns: 20% 80%; 
+  gap: 5px 0px; 
+  align-content: center;
+}
+
+#labelSettings label{
+  text-align: center;
+  font-weight: bold;
+}
+
+.labelInput{
+  width: 50%;
+  min-width: 50px;
 }
 
 /*based on https://www.w3schools.com/howto/howto_css_switch.asp*/
