--- a/css/experiment.css
+++ b/css/experiment.css
@@ -52,7 +52,14 @@ html, body{
     max-height: 90%;
     width: fit-content;
     padding: 20px;
+    background-color: rgba(255, 255, 255, 0.696);
+    cursor: pointer;
 }
+
+.bigButton:hover{
+    background-color: rgba(255, 255, 255, 1);
+}
+
 
 .videoPlayer{
     max-height: 100%;
@@ -102,9 +109,14 @@ html, body{
     width: 60%;
     height: 80%;
     font-size: 2vw;
-    margin: 10px;
     text-align: center;
     border-radius: 15%;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.696);
+}
+
+.ratingButton:hover{
+    background-color: rgba(255, 255, 255, 1);
 }
 
 .buttonLabel{
