--- a/css/results.css
+++ b/css/results.css
@@ -1,7 +1,14 @@
+.mainBody{
+    max-width: 100%;
+    max-height: 100%;
+}
+
 .pageContent{
     min-width: 500px;
     min-height: 300px;
+    max-width: 100vw;
     width: 100%;
+    max-height: 100%;
     height: fit-content;
     display: flex;
     flex-direction: column;
@@ -11,21 +18,76 @@
 
 .results{
     width: 100%;
+    max-width: 100vw;
     background-color: rgba(245, 246, 232, 0.606);
     box-shadow: 0 0 10px 15px rgba(245, 246, 232, 0.606);
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
+    grid-template-columns: 1fr auto;
+}
+
+#graphContainer{
+    max-height: 65vh;
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 canvas{
     max-width: 100%;
+    max-height: 100%;
     height: auto;
     aspect-ratio: 16 / 9;
+    padding: 10px;
+}
+
+#resultVideoContainer{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+#showVideo{
+    width: 30px;
+    height: auto;
+    writing-mode: vertical-lr;
+    text-orientation: mixed;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    cursor: pointer;
+}
+
+
+.arrowIcon{
+    display: inline;
+    width: 25px;
+    height: 25px;
+    transform: rotate(90deg);
+    transition: transform 0.2s;
+    margin-top: 20px;
+}
+
+.active{
+    transform: rotate(-90deg);
+}
+
+#videoContainer{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .videoPlayer{
     max-height: 100%;
-    max-width: 100%;
+    width: 100%;
     object-fit: contain;
     overflow-clip-margin: content-box;
     overflow: clip;
@@ -33,7 +95,7 @@ canvas{
 
 .csvContainer{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
 }
@@ -46,6 +108,7 @@ canvas{
     padding: 5px;
     cursor: pointer;
     border: 1px solid rgba(0, 0, 0, 0.484);
+    margin: 20px;
 }
 
 .csvContainer a:hover{
