--- a/css/experiment.css
+++ b/css/experiment.css
@@ -20,19 +20,45 @@ html, body{
 .textPanel{
     flex: 1;
     text-align: center;
-
+    width: fit-content;
+    max-height: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 10px;
 }
 
-.textPanel h1{
+.textPanel span{
     color: black;
     margin: 0px;
+    font-weight: normal;
+    font-size: 30pt;
 }
 
-.textPanel h2{
-    color: black;
-    margin: 0px;
-    font-size: 12pt;
-    font-style: italic;
+.textPanel button{
+    font-size: 15pt;
+    max-height: 90%;
+    width: fit-content;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.6);
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    font-size: 15pt;
+}
+
+/*image source: https://www.flaticon.com/free-icon/exit_1286853?term=exit&page=1&position=1&origin=search&related_id=1286853*/
+.exitIcon{
+    max-height: 20px;
+}
+
+.textPanel button:hover{
+    background-color: rgba(238, 65, 65, 0.6);
 }
 
 .videoContainer{
