--- a/css/results.css
+++ b/css/results.css
@@ -36,10 +36,10 @@
 
 canvas{
     max-width: 100%;
-    max-height: 100%;
-    height: auto;
-    aspect-ratio: 16 / 9;
+    height: 100%;
+    aspect-ratio: 5 / 3;
     padding: 10px;
+    background: white;
 }
 
 #resultVideoContainer{
