--- a/css/basicLayout.css
+++ b/css/basicLayout.css
@@ -58,6 +58,7 @@ body{
 
 .mainBody{
     width: 100vw;
+    max-width: 100%;
     min-height: calc(100vh - 60px - 25px);
     display: flex;
     justify-content: center;
