--- a/css/experiment.css
+++ b/css/experiment.css
@@ -105,6 +105,7 @@ html, body{
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 2147483647;
 }
 
 .ratingScale{
