--- a/css/results.css
+++ b/css/results.css
@@ -19,6 +19,7 @@
 .results{
     width: 100%;
     max-width: 100vw;
+    height: 100%;
     background-color: rgba(255, 255, 255, 0.6);
     box-shadow: 0 0 10px 15px rgba(255, 255, 255, 0.6);
     display: grid;
