--- a/css/results.css
+++ b/css/results.css
@@ -16,6 +16,28 @@
     align-items: center;
 }
 
+h1{
+    display: inline;
+}
+
+#displayMenu{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: stretch;
+    margin-bottom: 5px;
+}
+
+.displayOption{
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border: 2px solid black;
+}
+
+.displayOption:hover{
+    background-color: rgba(255, 255, 255, 0.846);
+}
+
 .results{
     width: 100%;
     max-width: 100vw;
@@ -37,7 +59,7 @@
 
 canvas{
     max-width: 100%;
-    height: 100%;
+    height: 90%;
     aspect-ratio: 5 / 3;
     padding: 10px;
     background: white;
