--- a/css/results.css
+++ b/css/results.css
@@ -38,6 +38,10 @@ h1{
     background-color: rgba(255, 255, 255, 0.846);
 }
 
+.activeOption{
+    background-color: rgba(255, 255, 255, 0.846);
+}
+
 .results{
     width: 100%;
     max-width: 100vw;
