--- a/css/index.css
+++ b/css/index.css
@@ -121,13 +121,6 @@
   width: 50px;
 }
 
-.startButton{
-  float: right;
-  background-color: white;
-  border: 1px solid black;
-  padding: 10px;
-}
-
 .radioButton{
   accent-color: rgb(48, 166, 154);
 }
@@ -323,4 +316,36 @@ input:checked + .slider:before {
   flex: 1;
   position: relative;
   padding: 15px;
+}
+
+
+.startButtonContainer{
+    width: 100%;
+}
+
+.startButton{
+  float: right;
+  background-color: white;
+  border: 1px solid black;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.startButton:hover{
+    background-color: rgba(255, 255, 255, 0.6);
+}
+
+/*source: https://www.flaticon.com/free-icon/file_1092000?term=download+document&page=1&position=1&origin=search&related_id=1092000
+source: https://www.flaticon.com/free-icon/file_1092216?term=upload+document&page=1&position=1&origin=search&related_id=1092216*/
+.downloadImg{
+    max-height: 25px;
+    cursor: pointer;
+    padding: 5px;
+    margin-left: 5px;
+    background-color: white;
+    border: 1px solid black;
+}
+
+.downloadImg:hover{
+    background-color: rgba(255, 255, 255, 0.6);
 }
