--- a/css/loadExperiment.css
+++ b/css/loadExperiment.css
@@ -45,6 +45,10 @@
 .infoField{
   max-height: 80%;
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-height: 500px;
 }
 
 .infoText{
