--- a/css/loadExperiment.css
+++ b/css/loadExperiment.css
@@ -46,13 +46,18 @@
   max-height: 80%;
   width: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   max-height: 500px;
 }
 
-.infoText{
+.msgField{
+  width: 100%;
   overflow-y: auto;
   border: 1px black solid;
   padding: 5px;
+  background-color: white;
+  white-space: pre-wrap;
+  margin-bottom: 10px;
 }
