added basic home header

--- a/components/header/homeHeader.html
+++ b/components/header/homeHeader.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <body>
-        test test test
+        <a id="homeButton" class="iconWrapper"><img class="home icon" src="./media/home_icon.png" alt="Home Icon"></a>
+        <a href="createExperiment.html" id="createExperiment">Create Remote Experiment</a>
+        <a href="loadExperiment.html" id="loadExperiment">Load Remote Experiment</a>
     </body>
 </html>
