--- a/css/basicLayout.css
+++ b/css/basicLayout.css
@@ -25,6 +25,8 @@ body{
     width: 100%;
     background-color: rgba(255, 255, 255, 0.9);
     text-align: center;
+    display: flex;
+    align-content: center;
 }
 
 .header h1{
@@ -36,12 +38,38 @@ body{
     font-size: 50px;
 }
 
+.header a{
+    display: block;
+    margin-top: auto;
+    margin-bottom: auto;
+    position: relative;
+    float: left;
+    font-size: 30px;
+    color: black;
+    text-decoration: none;
+    margin-right: 10px;
+    padding-right: 10px;
+    border-right: solid black 3px
+}
+
+.header a:hover{
+    font-weight: bold;
+}
+
+.header .active{
+    font-weight: bold;
+}
+
 
 .header .icon{
     max-height: 40px;
     width: auto;
     margin: 10px;
     cursor: pointer;
+}
+
+.header .icon:hover{
+    filter: invert(20%)
 }
 
 /*icon source: https://www.flaticon.com/free-icon/home_1946436?term=home&page=1&position=3&origin=tag&related_id=1946436*/
