--- a/css/experiment.css
+++ b/css/experiment.css
@@ -30,11 +30,25 @@ html, body{
     margin-bottom: 10px;
 }
 
-.textPanel span{
+.textPanel .mainInstruction{
     color: black;
     margin: 0px;
     font-weight: normal;
-    font-size: 30pt;
+    font-size: 25pt;
+}
+
+.textPanel .secondaryInstruction{
+    color: black;
+    margin: 0px;
+    font-weight: normal;
+    font-size: 15pt;
+}
+
+button{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
 }
 
 .textPanel button{
@@ -53,7 +67,9 @@ html, body{
 }
 
 /*image source: https://www.flaticon.com/free-icon/exit_1286853?term=exit&page=1&position=1&origin=search&related_id=1286853*/
-.exitIcon{
+/*image source: https://www.flaticon.com/free-icon/upload_4620095?term=video+upload&page=1&position=3&origin=search&related_id=4620095*/
+/*image soruce: https://www.flaticon.com/free-icon/refresh_545661?term=change&page=1&position=1&origin=search&related_id=545661*/
+.textPanel .btnIcon{
     max-height: 20px;
 }
 
@@ -80,6 +96,12 @@ html, body{
     padding: 20px;
     background-color: rgba(255, 255, 255, 0.6);
     cursor: pointer;
+    margin: 10px
+}
+
+.bigButton .btnIcon{
+    max-height: 30px;
+    margin-left: 5px;
 }
 
 .bigButton:hover{
@@ -123,17 +145,14 @@ html, body{
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 
 .ratingButton{
-    min-height: fit-content;
-    min-width: fit-content;
-    max-height: 100%;
     max-width: 100%;
-    width: 60%;
-    height: 80%;
+    height: 100%;
+    width: 80%;
     font-size: 2vw;
     text-align: center;
     border-radius: 15%;
