--- a/css/results.css
+++ b/css/results.css
@@ -16,8 +16,10 @@
     align-items: center;
 }
 
-h1{
-    display: inline;
+.textPanel{
+    text-align: center;
+    width: fit-content;
+    text-align: center;
 }
 
 #displayMenu{
@@ -110,15 +112,18 @@ canvas{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 10px;
 }
 
 .videoPlayer{
-    max-height: 100%;
+    max-height: 90%;
     width: 100%;
     object-fit: contain;
     overflow-clip-margin: content-box;
     overflow: clip;
 }
+
+
 
 .csvContainer{
     display: flex;
@@ -144,7 +149,7 @@ canvas{
 
 .bigButton{
     font-size: 12pt;
-    max-height: 90%;
+    max-height: 10%;
     width: fit-content;
     padding: 20px;
     background-color: rgba(255, 255, 255, 0.6);
