--- a/css/loadExperiment.css
+++ b/css/loadExperiment.css
@@ -42,6 +42,43 @@
   align-items: center;
 }
 
+.bigButton{
+    font-size: 12pt;
+    max-height: 10%;
+    width: fit-content;
+    padding: 20px;
+    background-color: rgba(255, 255, 255, 0.6);
+    cursor: pointer;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+
+.mediumButton{
+    font-size: 10pt;
+    max-height: 7%;
+    width: fit-content;
+    padding: 5px;
+    background-color: rgba(255, 255, 255, 0.6);
+    cursor: pointer;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+
+button .btnIcon{
+    max-height: 25px;
+    margin-left: 5px;
+}
+
+.bigButton:hover{
+    background-color: rgba(255, 255, 255, 1);
+}
+
 .infoField{
   max-height: 80%;
   width: 100%;
@@ -54,10 +91,21 @@
 
 .msgField{
   width: 100%;
+  max-height: 90%;
   overflow-y: auto;
   border: 1px black solid;
   padding: 5px;
   background-color: white;
   white-space: pre-wrap;
   margin-bottom: 10px;
+}
+
+.buttonField{
+  width: 100%;
+  max-height: 10%;
+  padding: 5px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
 }
