auto-rate lowest option

--- a/components/settingsAccordion/settingsAccordion.html
+++ b/components/settingsAccordion/settingsAccordion.html
@@ -109,6 +109,10 @@
                     <label for="pause">pause</label>
                 </div>
                 <div>
+                    <input type="radio" id="lowest" class="radioButton" name="notRatedBehaviour" value="lowest">
+                    <label for="lowest">rate lowest</label>
+                </div>
+                <div>
                     <input type="radio" id="neutral" class="radioButton" name="notRatedBehaviour" value="neutral">
                     <label for="neutral">rate neutral</label>
                 </div>
