citation pop-up, updates to ReadMe and info popup for lowest rating

--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <span class="footerNote">19/08/2025</span>
-        <span class="footerNote">V3.6</span>
+        <span class="footerNote">25/11/2025</span>
+        <span class="footerNote">V4.0</span>
         <span class="footerNote">© Linda Steiner (linste.zh@gmail.com)</span>
-        <span class="footerNote">UZH - Zurich</span>
-        <span class="footerNote"><a href="https://github.com/linste-zh/viinvara" target="_blank">Project Git Page</a></span>
+        <span class="footerNote"><button id="citeLink">Citation</button></span>
+        <span class="footerNote"><a href="https://github.com/linste-zh/vinvara" target="_blank">Project Git Page</a></span>
     </body>
 </html>
