--- a/css/basicLayout.css
+++ b/css/basicLayout.css
@@ -116,3 +116,68 @@ body{
 a{
     color:rgb(0, 51, 102);
 }
+
+.footerNote button{
+    display: inline;
+    border: 0;
+    font: inherit;
+    text-decoration: underline;
+    cursor: pointer;
+    background: transparent;
+    color: rgb(0, 51, 102);
+}
+
+.backgroundCover{
+    position:fixed;
+    width:100%;
+    height:100%;
+    top:0px;
+    left:0px;
+    z-index:1000;
+    background-color: rgba(120, 120, 120, 0.712);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.citationBox{
+    background-color: white;
+    min-width: 200px;
+    max-width: 50vw;
+    min-height: 100px;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+}
+
+.citationBox .header{
+    flex: 0 0 20%;
+    width: 100%;
+    background-color: rgba(19,73,233,1);
+    position: relative;
+    display: block;
+}
+
+.citationBox .closeButton{
+    float: right;
+    max-height: 90%;
+    cursor: pointer;
+}
+
+.citationBox .title{
+    color: white;
+    padding: 5px;
+}
+
+
+.citationBox .text{
+    flex: 1;
+    position: relative;
+    padding: 15px;
+}
+
+.citationBox .citation{
+    text-indent: -36px;
+    padding-left: 36px;
+}
