--- a/components/header/indexHeader.html
+++ b/components/header/indexHeader.html
@@ -2,7 +2,7 @@
 <html>
     <body>
         <a id="homeButton" class="iconWrapper"><img class="home icon" src="./media/home_icon.png" alt="Home Icon"></a>
-        <h1>Viinvara</h1>
+        <h1>Vinvara</h1>
         <!--<a class="iconWrapper" onclick=""><img class="help icon" src="./media/help_icon.png" alt="Help Icon"></a>--> 
     </body>
 </html>
