minor display improvements

--- a/css/basicLayout.css
+++ b/css/basicLayout.css
@@ -13,6 +13,11 @@ body{
       "main" 1fr
       "footer" auto
     ;*/
+    font-family:'Times New Roman', Times, serif;
+}
+
+button{
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .header{
